--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
   "C_Cpp_Runner.warningsAsError": false,
   "files.associations": {
     "libft.h": "c",
-    "get_next_line_bonus.h": "c"
+    "get_next_line_bonus.h": "c",
+    "so_long.h": "c"
   }
 }
