--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,22 +1,22 @@
 NAME	:= so_long
-SRC		:=  get_next_line_utils.c	\
-			get_next_line.c			\
-			Hooks.c					\
-			Init.c					\
-			main.c					\
-			Movement.c				\
-			Render.c				\
-			ValidateMapObjects.c	\
-			ValidateMapStructure.c	\
-			Errors2.c				\
-			Errors1.c				
+SRC		:=  ./src/SrcMandatory/get_next_line_utils.c	\
+			./src/SrcMandatory/get_next_line.c			\
+			./src/SrcMandatory/Hooks.c					\
+			./src/SrcMandatory/Init.c					\
+			./src/SrcMandatory/main.c					\
+			./src/SrcMandatory/Movement.c				\
+			./src/SrcMandatory/Render.c					\
+			./src/SrcMandatory/ValidateMapObjects.c		\
+			./src/SrcMandatory/ValidateMapStructure.c	\
+			./src/SrcMandatory/Errors2.c				\
+			./src/SrcMndatory/Errors1.c
 SRCB	:=  Loops_bonus.c			\
 			main_bonus.c			
 OBJ		:= $(patsubst %.c, %.o, $(SRC)) 
 OBJB	:= $(patsubst %.c, %.o, $(SRCB)) 
 CC		:= gcc
 FLAGS	:= -Wall -Wextra -Werror
-LIBFT	:= ./libft/libft.a
+LIBFT	:= ./src/libft/libft.a
 
 .PHONY: all clean fclean re bonus
 
@@ -26,10 +26,10 @@ $(NAME): $(LIBFT) $(OBJ)
 %.o: %.c
 	$(CC) $(FLAGS) -c $<  -o $@
 $(LIBFT):
-	make -C ./libft
+	make -C ./src/libft
 clean:
 	rm -f $(OBJ) $(OBJB)
-	make -C ./libft fclean
+	make -C ./src/libft fclean
 fclean: clean
 	rm -f $(NAME)
 re: fclean all
